# spacy-layout

./: .gitignore  FORK_DIFFERENCES_SUMMARY.md  README.md  commit_differences.txt  fork_differences.patch  pyproject.toml  setup.cfg
spacy_layout/: layout.py  types.py  util.py
tests/: test_general.py
