[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spacy-layout"
version = "0.0.13"
description = "Process PDFs, Word documents and more with spaCy"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Explosion", email = "contact@explosion.ai"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "spacy>=3.7.5",
    "docling>=2.5.2",
    "pandas",
    "srsly",
]

[project.urls]
Homepage = "https://github.com/explosion/spacy-layout"
Repository = "https://github.com/explosion/spacy-layout"

[tool.setuptools.packages.find]
include = ["spacy_layout*"]